# cookie-sandbox

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: automerge.yml  cd.yml  chores.yml  ci.yml  container.yml  dependencies.yml  issues.yml  schedule.yml
.github/workflows/actions/python-poetry/: action.yml
cookie_sandbox/: __init__.py  __version__.py
docker/: entrypoint
tests/: test_module.py
